# track-a-tron

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  supervisor.apps.ini  supervisord.conf
DockerCompose/: development-db.yaml
Dockerfiles/: Dockerfile-l1  Dockerfile-l2  Dockerfile-l3  __main__.py
app/: __init__.py  config.py  globals.py
app/api/: __init__.py
app/decorators/: __init__.py  limit_to_json.py
app/extensions/: __init__.py  folders.py
app/logging/: __init__.py
app/resources/: catch_all.py
app/rpc/: blueprint.py
app/services/: __init__.py  blueprint.py
app/sql/: __init__.py  engines.py  sessions.py  types.py
app/utilities/: __init__.py  api_responce.py  camel_case_to_snake_case.py  clean_string.py  condense_client_address.py  datetime_delta.py  is_truly.py  money_to_int.py  security.py  standard_json_response.py  system_log.py
backend/: __init__.py  config.py
backend/rpc/: blueprint.py
backend/sql/: engines.py
backend/utilities/: condense_client_address.py  money_to_int.py  security.py  status_changer.py  system_log.py
cli/database/: __main__.py  database.py
cli/run/: __init__.py  __main__.py  run.py
cli/setup/: __main__.py  setup.py
cli/users/: __main__.py  users.py
frontend/: __router__.jsx  globals.js  index.html  package-lock.json  tailwind.config.js  vite.config.js
frontend/contextManagers/: ContextAccount.jsx  ContextClient.jsx  ContextClientAdd.jsx  ContextClients.jsx  ContextMain.jsx  ContextRejectAuth.jsx  ContextRequireAdmin.jsx  ContextRequireAuth.jsx  (+5 more)
hypercorn/: config.toml
requirements/: development.txt  main.txt  production.txt
supervisor/: supervisor.apps.ini  supervisord.conf
vite_frontend/: __router__.jsx  index.html  package-lock.json  package.json
(+516 files in other folders)
