[project]
name = "track-a-tron"

[tool.vite_transporter]
npm_exec = "npm"
npx_exec = "npx"
serve_app = "app"
vite_apps = ["frontend"]

[tool.pyqwe]
app-dev = "app:dev"
app-pro = "*:hypercorn app:create_app --config hypercorn/config.toml"
frontend-run = "*(frontend):npx vite --host 127.0.0.1 --port 6262"
frontend-build = "*(frontend):npx vite build"
frontend-install = "*(frontend):npm install"
frontend-update = "*(frontend):npm update"
frontend-compile = "*:vt compile"
load-test-data = "*:python3 cli/setup load-test-data"