[project]
name = "track-a-tron"

[tool.vite_transporter]
npm_exec = "npm"
npx_exec = "npx"
serve_app = "app"
vite_apps = ["frontend"]

[tool.pyqwe]
run-backend = "*:flask run --port 7070 --debug"
run-frontend = "*(frontend):npx vite --host 127.0.0.1 --port 6262"
build-frontend = "*(frontend):npx vite build"
install-frontend = "*(frontend):npm install"
update-frontend = "*(frontend):npm update"
compile-frontend = "*:vt compile"
load-test-data = "*:python3 cli/setup load-test-data"

[tool.ruff]
src = ["app"]
fix = true
show-fixes = true
output-format = "full"